SEOBNR: update initial condtions and factorized modes.  Need interpolation for NQC corrections.

--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,6 +62,37 @@
     "dHdpx,dHdpy,dHdpz = sp.symbols(\"dHdpx dHdpy dHdpz\",real=True)\n",
     "rho22v2,rho22v3,rho22v4,rho22v5,rho22v6,rho22v6l,rho22v7,rho22v8,rho22v8l,rho22v10,rho22v10l = sp.symbols(\"rho22v2 rho22v3 rho22v4 rho22v5 rho22v6 rho22v6l rho22v7 rho22v8 rho22v8l rho22v10 rho22v10l\",real=True)\n",
     "rho21v1,rho21v2,rho21v3,rho21v4,rho21v5,rho21v6,rho21v6l,rho21v7,rho21v7l,rho21v8,rho21v8l,rho21v10,rho21v10l = sp.symbols(\"rho21v1 rho21v2 rho21v3 rho21v4 rho21v5 rho21v6 rho21v6l rho21v7 rho21v7l rho21v8 rho21v8l rho21v10 rho21v10l\",real=True)\n",
+    "f21v1,f21v3 = sp.symbols(\"f21v1 f21v3\",real=True)\n",
+    "rho33v2,rho33v3,rho33v4,rho33v5,rho33v6,rho33v6l,rho33v7,rho33v8,rho33v8l = sp.symbols(\"rho33v2 rho33v3 rho33v4 rho33v5 rho33v6 rho33v6l rho33v7 rho33v8 rho33v8l\",real=True)\n",
+    "f33v3 = sp.symbols(\"f33v3\",real=True)\n",
+    "rho32v,rho32v2,rho32v3,rho32v4,rho32v5,rho32v6,rho32v6l,rho32v8,rho32v8l = sp.symbols(\"rho32v rho32v2 rho32v3 rho32v4 rho32v5 rho32v6 rho32v6l rho32v8 rho32v8l\",real=True)\n",
+    "rho31v2,rho31v3,rho31v4,rho31v5,rho31v6,rho31v6l,rho31v7,rho31v8,rho31v8l = sp.symbols(\"rho31v2 rho31v3 rho31v4 rho31v5 rho31v6 rho31v6l rho31v7 rho31v8 rho31v8l\",real=True)\n",
+    "f31v3 = sp.symbols(\"f31v3\",real=True)\n",
+    "rho44v2,rho44v3,rho44v4,rho44v5,rho44v6,rho44v6l = sp.symbols(\"rho44v2 rho44v3 rho44v4 rho44v5 rho44v6 rho44v6l\",real=True)\n",
+    "rho43v,rho43v2,rho43v4,rho43v5,rho43v6,rho43v6l = sp.symbols(\"rho43v rho43v2 rho43v4 rho43v5 rho43v6 rho43v6l\",real=True)\n",
+    "f43v = sp.symbols(\"f43v\",real=True)\n",
+    "rho42v2,rho42v3,rho42v4,rho42v5,rho42v6,rho42v6l = sp.symbols(\"rho42v2 rho42v3 rho42v4 rho42v5 rho42v6 rho42v6l\",real=True)\n",
+    "rho41v,rho41v2,rho41v4,rho41v5,rho41v6,rho41v6l = sp.symbols(\"rho41v rho41v2 rho41v4 rho41v5 rho41v6 rho41v6l\",real=True)\n",
+    "f41v = sp.symbols(\"f41v\",real=True)\n",
+    "rho55v2,rho55v3,rho55v4,rho55v5,rho55v6 = sp.symbols(\"rho55v2 rho55v3 rho55v4 rho55v5 rho55v6\",real=True)\n",
+    "rho54v2,rho54v3,rho54v4 = sp.symbols(\"rho54v2 rho54v3 rho54v4\",real=True)\n",
+    "rho53v2,rho53v3,rho53v4,rho53v5 = sp.symbols(\"rho53v2 rho53v3 rho53v4 rho53v5\",real=True)\n",
+    "rho52v2,rho52v3,rho52v4 = sp.symbols(\"rho52v2,rho52v3,rho52v4\",real=True)\n",
+    "rho51v2,rho51v3,rho51v4,rho51v5 = sp.symbols(\"rho51v2 rho51v3 rho51v4 rho51v5\",real=True)\n",
+    "rho66v2,rho66v3,rho66v4 = sp.symbols(\"rho66v2 rho66v3 rho66v4\", real=True)\n",
+    "rho65v2,rho65v3 = sp.symbols(\"rho65v2 rho65v3\",real=True)\n",
+    "rho64v2,rho64v3,rho64v4 = sp.symbols(\"rho64v2 rho64v3 rho64v4\",real=True)\n",
+    "rho63v2,rho63v3 = sp.symbols(\"rho63v2 rho63v3\",real=True)\n",
+    "rho62v2,rho62v3,rho62v4 = sp.symbols(\"rho62v2 rho62v3 rho62v4\",real=True)\n",
+    "rho61v2,rho61v3 = sp.symbols(\"rho61v2 rho61v3\",real=True)\n",
+    "rho77v2,rho77v3 = sp.symbols(\"rho77v2 rho77v3\", real=True)\n",
+    "rho76v2 = sp.symbols(\"rho76v2\",real=True)\n",
+    "rho75v2,rho75v3 = sp.symbols(\"rho75v2 rho75v3\",real=True)\n",
+    "rho74v2 = sp.symbols(\"rho74v2\",real=True)\n",
+    "rho73v2,rho73v3 = sp.symbols(\"rho73v2 rho73v3\",real=True)\n",
+    "rho72v2 = sp.symbols(\"rho72v2\",real=True)\n",
+    "rho71v2,rho71v3 = sp.symbols(\"rho71v2 rho71v3\",real=True)\n",
+    "rho88v2,rho87v2,rho86v2,rho85v2,rho84v2,rho83v2,rho82v2,rho81v2 = sp.symbols(\"rho88v2 rho87v2 rho86v2 rho85v2 rho84v2 rho83v2 rho82v2 rho81v2\",real=True)\n",
     "\n",
     "gamma = 0.577215664901532860606512090082402431\n",
     "Msol = 4.925491025543575903411922162094833998e-6"
@@ -1186,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1328,7 @@
     "        sign = -1\n",
     "    lpepm1 = l + epsilon - 1\n",
     "    if (m1!=m2) or sign==1:\n",
-    "        c = sp.power(m2hat,lpepm1) + sign*sp.power(m1hat,lpepm1)\n",
+    "        c = sp.Pow(m2hat,lpepm1) + sign*sp.Pow(m1hat,lpepm1)\n",
     "    else:\n",
     "        if l==2 or l==3:\n",
     "            c = -1.\n",
@@ -1334,22 +1365,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'module' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-42-66ba4a44246a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;31m#Note that LALSimIMREOBNewtonianMultipole.c Line 74 atrributes the\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0;31m#Newtonian prefix calculations to https://arxiv.org/abs/1106.1021v2\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0mprefix\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNewtonianPrefix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mepsilon\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0meta\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m         \u001b[0mmultipole\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprefix\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mlegendre\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mpower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvPhi\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mvPhi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mepsilon\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m2.\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m%\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-41-a30901904111>\u001b[0m in \u001b[0;36mNewtonianPrefix\u001b[0;34m(m1, m2, l, m, epsilon, eta)\u001b[0m\n\u001b[1;32m    106\u001b[0m     \u001b[0mlpepm1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ml\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mepsilon\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mm1\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0mm2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0msign\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 108\u001b[0;31m         \u001b[0mc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm2hat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlpepm1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0msign\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm1hat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlpepm1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    109\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    110\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'module' object is not callable"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for l in range(2, 9):\n",
     "    for m in range(1, l+1):\n",
@@ -1359,7 +1377,7 @@
     "        #Note that LALSimIMREOBNewtonianMultipole.c Line 74 atrributes the\n",
     "        #Newtonian prefix calculations to https://arxiv.org/abs/1106.1021v2\n",
     "        prefix = NewtonianPrefix(m1,m2,l,m,epsilon,eta)\n",
-    "        multipole = prefix*legendre*power(vPhi*vPhi,(l+epsilon)/2.)\n",
+    "        multipole = prefix*legendre*sp.Pow(vPhi*vPhi,(l+epsilon)/2.)\n",
     "        if ((l+m)%2)==0:\n",
     "            Slm = (Hreal*Hreal - 1.)/(2.*eta) + 1.\n",
     "        else:\n",
@@ -1370,18 +1388,123 @@
     "        Hrealksq4 = 4. * Hrealk*Hrealk\n",
     "        Hrealk4pi = 4. * sp.pi *Hrealk\n",
     "        Tlmprefac = sp.sqrt(Hrealk4pi/(1.-sp.exp(-Hrealk4pi)))/factorial(l)\n",
-    "        Tlmprodface = 1.\n",
+    "        Tlmprodfac = 1.\n",
     "        for i in range(1,l+1):\n",
     "            Tlmprodfac *= Hrealksq4 + (i*i)\n",
-    "        Tlm = Tlmprefac*sqrt(Tlmprodfac)\n",
+    "        Tlm = Tlmprefac*sp.sqrt(Tlmprodfac)\n",
+    "        auxflm = 0.\n",
     "        if l==2:\n",
     "            if m==2:\n",
     "                rholm = 1 + vsq * (rho22v2 + v*(rho22v3 + v*(rho22v4 + v*(rho22v5 + v*(rho22v6 + rho22v6l*eulerlog\n",
-    "                                + v*(rho22v7 + v*(rho22v8 + rho22v8l*eulerlog + (rho22v10 + rho22v10l*eulerlog)*v2)))))))\n",
-    "            if m==1:\n",
+    "                                + v*(rho22v7 + v*(rho22v8 + rho22v8l*eulerlog + (rho22v10\n",
+    "                                + rho22v10l*eulerlog)*vsq)))))))\n",
+    "            elif m==1:\n",
     "                rholm = 1. + v * (rho21v1 + v*(rho21v2 + v*(rho21v3 + v*(rho21v4 + v*(rho21v5 + v*(rho21v6\n",
     "                                + rho21v6l*eulerlog + v*(rho21v7 + rho21v7l*eulerlog + v*(rho21v8 + rho21v8l*eulerlog\n",
-    "                                + (rho21v10 + rho21v10l*eulerlog)*v2))))))))"
+    "                                + (rho21v10 + rho21v10l*eulerlog)*vsq))))))))\n",
+    "                auxflm = v * f21v1 + vsq*v*f21v3\n",
+    "            else:\n",
+    "                print(\"You used a bad (l,m)\")\n",
+    "        elif l==3:\n",
+    "            if m==3:\n",
+    "                rholm = 1. + vsq*(rho33v2 + v*(rho33v3 + v*(rho33v4 + v*(rho33v5 + v*(rho33v6 + rho33v6l*eulerlog\n",
+    "                                + v*(rho33v7 + (rho33v8 + rho33v8l*eulerlog)*v))))))\n",
+    "                auxflm = v*vsq*f33v3;\n",
+    "            elif m==2:\n",
+    "                rholm = 1. + v*(rho32v + v*(rho32v2 + v*(rho32v3 + v*(rho32v4 + v*(rho32v5 + v*(rho32v6\n",
+    "                                + rho32v6l*eulerlog + (rho32v8 + rho32v8l * eulerlog) * vsq))))))\n",
+    "            elif m==1:\n",
+    "                rholm = 1. + vsq*(rho31v2 + v*(rho31v3 + v*(rho31v4 + v*(rho31v5 + v*(rho31v6 + rho31v6l*eulerlog\n",
+    "                                + v*(rho31v7 + (rho31v8 + rho31v8l*eulerlog)*v))))))\n",
+    "                auxflm = v*vsq*f31v3\n",
+    "            else:\n",
+    "                print(\"You used a bad (l,m)\")\n",
+    "        elif l==4:\n",
+    "            if m==4:\n",
+    "                rholm = 1. + vsq*(rho44v2 + v*(rho44v3 + v*(rho44v4 + v*(rho44v5 + (rho44v6 + rho44v6l*eulerlog)*v))))\n",
+    "            elif m==3:\n",
+    "                rholm = 1. + v*(rho43v + v*(rho43v2 + vsq*(rho43v4 + v*(rho43v5 + (rho43v6 + rho43v6l*eulerlog)*v))))\n",
+    "                auxflm = v*f43v\n",
+    "            elif m==2:\n",
+    "                rholm = 1. + vsq*(rho42v2 + v*(rho42v3 + v*(rho42v4 + v*(rho42v5 + (rho42v6 + rho42v6l * eulerlog)*v))))\n",
+    "            elif m==1:\n",
+    "                rholm = 1. + v*(rho41v + v*(rho41v2 + vsq*(rho41v4 + v*(rho41v5 + (rho41v6 + rho41v6l*eulerlog)*v))))\n",
+    "                auxflm = v*f41v\n",
+    "            else:\n",
+    "                print(\"You used a bad (l,m)\")\n",
+    "        elif l==5:\n",
+    "            if m==5:\n",
+    "                rholm = 1. + vsq*(rho55v2 + v*(rho55v3 + v*(rho55v4 + v*(rho55v5 + rho55v6*v))))\n",
+    "            elif m==4:\n",
+    "                rholm = 1. + vsq*(rho54v2 + v*(rho54v3 + rho54v4*v))\n",
+    "            elif m==3:\n",
+    "                rholm = 1. + vsq*(rho53v2 + v*(rho53v3 + v*(rho53v4 + rho53v5*v)))\n",
+    "            elif m==2:\n",
+    "                rholm = 1. + vsq*(rho52v2 + v*(rho52v3 + rho52v4*v))\n",
+    "            elif m==1:\n",
+    "                rholm = 1. + vsq*(rho51v2 + v*(rho51v3 + v*(rho51v4 + rho51v5*v)))\n",
+    "            else:\n",
+    "                print(\"You used a bad (l,m)\")\n",
+    "        elif l==6:\n",
+    "            if m==6:\n",
+    "                rholm = 1. + vsq*(rho66v2 + v*(rho66v3 + rho66v4*v))\n",
+    "            elif m==5:\n",
+    "                rholm = 1. + vsq*(rho65v2 + rho65v3*v)\n",
+    "            elif m==4:\n",
+    "                rholm = 1. + vsq*(rho64v2 + v*(rho64v3 + rho64v4*v))\n",
+    "            elif m==3:\n",
+    "                rholm = 1. + vsq*(rho63v2 + rho63v3*v)\n",
+    "            elif m==2:\n",
+    "                rholm = 1. + vsq*(rho62v2 + v*(rho62v3 + rho62v4*v))\n",
+    "            elif m==1:\n",
+    "                rholm = 1. + vsq*(rho61v2 + rho61v3*v)\n",
+    "            else:\n",
+    "                print(\"You used a bad (l,m)\")\n",
+    "        elif l==7:\n",
+    "            if m==7:\n",
+    "                rholm = 1. + vsq*(rho77v2 + rho77v3*v)\n",
+    "            elif m==6:\n",
+    "                rholm = 1. + rho76v2*vsq\n",
+    "            elif m==5:\n",
+    "                rholm = 1. + vsq*(rho75v2 + rho75v3*v)\n",
+    "            elif m==4:\n",
+    "                rholm = 1. + rho74v2*vsq\n",
+    "            elif m==3:\n",
+    "                rholm = 1. + vsq*(rho73v2 + rho73v3*v)\n",
+    "            elif m==2:\n",
+    "                rholm = 1. + rho72v2*vsq\n",
+    "            elif m==1:\n",
+    "                rholm = 1. + vsq*(rho71v2 + rho71v3*v)\n",
+    "            else:\n",
+    "                print(\"You used a bad (l,m)\")\n",
+    "        elif l==8:\n",
+    "            if m==8:\n",
+    "                rholm = 1. + rho88v2*vsq\n",
+    "            elif m==7:\n",
+    "                rholm = 1. + rho87v2*vsq\n",
+    "            elif m==6:\n",
+    "                rholm = 1. + rho86v2*vsq\n",
+    "            elif m==5:\n",
+    "                rholm = 1. + rho85v2*vsq\n",
+    "            elif m==4:\n",
+    "                rholm = 1. + rho84v2*vsq\n",
+    "            elif m==3:\n",
+    "                rholm = 1. + rho83v2*vsq\n",
+    "            elif m==2:\n",
+    "                rholm = 1. + rho82v2*vsq\n",
+    "            elif m==1:\n",
+    "                rholm = 1. + rho81v2*vsq\n",
+    "            else:\n",
+    "                print(\"You used a bad (l,m)\")\n",
+    "        else:\n",
+    "            print(\"You used a bad (l,m)\")\n",
+    "        rholmPowl = sp.Pow(rholm,l)\n",
+    "        if eta==0.25 and (m % 2):\n",
+    "            rholmPowl = auxflm\n",
+    "        else:\n",
+    "            rholmPowl += auxflm\n",
+    "        hlm = Tlm*Slm*rholmPowl*multipole\n",
+    "        "
    ]
   },
   {
