SEOBNR: update initial condtions; factorized modes complete, converting to NumPy.

--- a/Tutorial-SEOBNR_Factorized_Modes.ipynb
+++ b/Tutorial-SEOBNR_Factorized_Modes.ipynb
@@ -75,6 +75,7 @@
    "outputs": [],
    "source": [
     "deltam = (m1 - m2)/(m1 + m2)\n",
+    "deltam2 = deltam*deltam\n",
     "\n",
     "a2 = a*a\n",
     "a3 = a2*a\n",
@@ -114,8 +115,8 @@
     "rho22v3 = 2.*(chiS*(1 - eta) + chiA*deltam)/3.\n",
     "rho22v4 = 1./2.*(chiS + chiA*deltam) + 19583.*eta2/42336. - 33025.*eta/21168. - 20555./10584.\n",
     "rho22v5 = -34.*a/21.\n",
-    "rho22v6 = 1556919113./122245200. + (89.*a2)/252. - (48993925.*eta)/9779616. - (6292061.*eta2)/3259872.\n",
-    "                + (10620745.*eta3)/39118464. + (41.*eta*sp.pi*sp.pi)/192.\n",
+    "rho22v6 = (1556919113./122245200. + (89.*a2)/252. - (48993925.*eta)/9779616. - (6292061.*eta2)/3259872.\n",
+    "           + (10620745.*eta3)/39118464. + (41.*eta*sp.pi*sp.pi)/192.)\n",
     "rho22v6l = -428./105.\n",
     "rho22v7 = (18733.*a)/15876. + a3/3.\n",
     "rho22v8 = -387216563023./160190110080. + (18353.*a2)/21168. - a*4/8.\n",
@@ -126,111 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "parenthesis is never closed (<ipython-input-5-3913eb2b1c56>, lines 148-161)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-3913eb2b1c56>\"\u001b[0;36m, line \u001b[0;32m148\u001b[0m\n\u001b[0;31m    1252563795.*eta4)/(317116800.*sp.Pow(m1p3eta,2)\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m parenthesis is never closed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Terms we still need:\n",
-    "\n",
-    "rho42v2\n",
-    "rho42v3\n",
-    "rho42v4\n",
-    "rho42v5\n",
-    "rho42v6\n",
-    "rho42v6l\n",
-    "\n",
-    "rho41v\n",
-    "rho41v2\n",
-    "rho41v4\n",
-    "rho41v5\n",
-    "rho41v6\n",
-    "rho41v6l\n",
-    "\n",
-    "f41v\n",
-    "\n",
-    "rho55v2\n",
-    "rho55v3\n",
-    "rho55v4\n",
-    "rho55v5\n",
-    "rho55v6\n",
-    "\n",
-    "rho54v2\n",
-    "rho54v3\n",
-    "rho54v4\n",
-    "\n",
-    "rho53v2\n",
-    "rho53v3\n",
-    "rho53v4\n",
-    "rho53v5\n",
-    "\n",
-    "rho52v2\n",
-    "rho52v3\n",
-    "rho52v4\n",
-    "\n",
-    "rho51v2\n",
-    "rho51v3\n",
-    "rho51v4\n",
-    "rho51v5\n",
-    "\n",
-    "rho66v2\n",
-    "rho66v3\n",
-    "rho66v4\n",
-    "\n",
-    "rho65v2\n",
-    "rho65v3\n",
-    "\n",
-    "rho64v2\n",
-    "rho64v3\n",
-    "rho64v4\n",
-    "\n",
-    "rho63v2\n",
-    "rho63v3\n",
-    "\n",
-    "rho62v2\n",
-    "rho62v3\n",
-    "rho62v4\n",
-    "\n",
-    "rho61v2\n",
-    "rho61v3\n",
-    "\n",
-    "rho77v2\n",
-    "rho77v3\n",
-    "\n",
-    "rho76v2\n",
-    "\n",
-    "rho75v2\n",
-    "rho75v3\n",
-    "\n",
-    "rho74v2\n",
-    "\n",
-    "rho73v2\n",
-    "rho73v3\n",
-    "\n",
-    "rho72v2\n",
-    "\n",
-    "rho71v2\n",
-    "rho71v3\n",
-    "\n",
-    "rho88v2\n",
-    "rho87v2\n",
-    "rho86v2\n",
-    "rho85v2\n",
-    "rho84v2\n",
-    "rho83v2\n",
-    "rho82v2\n",
-    "rho81v2\n",
-    "\n",
-    "~~~~~~~\n",
-    "\n",
     "rho21v1 = 0.0\n",
     "ho21v2 = -59./56. + (23.*eta)/84.\n",
     "rho21v3 = 0.\n",
@@ -246,7 +146,7 @@
     "rho21v10l = 5029963./5927040.\n",
     "\n",
     "f21v1 = (-3.*(chiS + chiA/deltam))/2.\n",
-    "f21v3 = (chiS*deltam*(427. + 79.*eta) + chiA*(147. + 280.*deltam*deltam + 1251.*eta))/84./deltam\n",
+    "f21v3 = (chiS*deltam*(427. + 79.*eta) + chiA*(147. + 280.*deltam2 + 1251.*eta))/84./deltam\n",
     "\n",
     "rho33v2 = -7./6. + (2.*eta)/3.\n",
     "rho33v3 = 0.\n",
@@ -261,7 +161,7 @@
     "f33v3 = (chiS*deltam*(-4. + 5.*eta) + chiA*(-4. + 19.*eta))/(2.*deltam)\n",
     "\n",
     "rho32v = (4.*chiS*eta)/(-3.*(m1 + 3*eta))\n",
-    "rho32v2 = (-4.*a2*eta2)/(9.*sp.Pow(m1 + 3*eta),2) + (328. - 1115.*eta + 320.*eta2)/(270.*m1p3eta)\n",
+    "rho32v2 = (-4.*a2*eta2)/(9.*sp.Pow(m1 + 3*eta,2)) + (328. - 1115.*eta + 320.*eta2)/(270.*m1p3eta)\n",
     "rho32v3 = 2./9.*a\n",
     "rho32v4 = a2/3. + (-1444528. + 8050045.*eta - 4725605.*eta2 - 20338960.*eta3\n",
     "                   + 3085640.*eta4)/sp.Pow(1603800.*m1p3eta,2)\n",
@@ -284,9 +184,9 @@
     "f31v3 = (chiA * (-4. + 11.*eta) + chiS*deltam*(-4. + 13.*eta))/(2.*deltam)\n",
     "\n",
     "rho44v2 = (1614. - 5870.*eta + 2625.*eta2)/(1320.*m1p3eta)\n",
-    "rho44v3 = (chiA * (10. - 39.*eta)*dM + chiS * (10. - 41.*eta + 42.*eta2)) / (15.*m1p3eta)\n",
+    "rho44v3 = (chiA * (10. - 39.*eta)*deltam + chiS * (10. - 41.*eta + 42.*eta2)) / (15.*m1p3eta)\n",
     "rho44v4 = a2/2. + (-511573572. + 2338945704.*eta - 313857376.*eta2 - 6733146000. * eta3 +\n",
-    "                   1252563795.*eta4)/(317116800.*sp.Pow(m1p3eta,2)\n",
+    "                   1252563795.*eta4)/(317116800.*sp.Pow(m1p3eta,2))\n",
     "rho44v5 = (-69.*a)/55.\n",
     "rho44v6 = 16600939332793./1098809712000. + (217.*a2)/3960.\n",
     "rho44v6l = -12568./3465.\n",
@@ -298,7 +198,107 @@
     "rho43v6 = 1664224207351./195343948800.\n",
     "rho43v6l = -1571./770.\n",
     "\n",
-    "f43v = (5.*(chiA - chiS*dM)*eta)/(2.*dM*(-1. + 2.*eta))"
+    "f43v = (5.*(chiA - chiS*deltam)*eta)/(2.*deltam*(-1. + 2.*eta))\n",
+    "\n",
+    "rho42v2 = (1146. - 3530.*eta + 285.*eta2)/(1320.*m1p3eta)\n",
+    "rho42v3 = (chiA * (10. - 21.*eta)*deltam + chiS*(10. - 59.*eta + 78.*eta2))/(15.*m1p3eta)\n",
+    "rho42v4 = a2/2. + (-114859044. + 295834536.*eta + 1204388696.*eta2 - 3047981160.*eta3\n",
+    "                   - 379526805.*eta4)/(317116800.*m1p3eta*m1p3eta)\n",
+    "rho42v5 = (-7.*a)/110.\n",
+    "rho42v6 = 848238724511./219761942400. + (2323.*a2)/3960.\n",
+    "rho42v6l = -3142. / 3465.\n",
+    "\n",
+    "rho41v = 0.0\n",
+    "rho41v2 = (602. - 1385.*eta + 288.*eta2)/(528.*(-1. + 2.*eta))\n",
+    "rho41v4 = -7775491./21141120. + (3.* a2)/8.\n",
+    "rho41v5 = (-20033.*a)/55440. - (5*a3)/6.\n",
+    "rho41v6 = 1227423222031./1758095539200.\n",
+    "rho41v6l = -1571. / 6930.\n",
+    "\n",
+    "f41v = (5.*(chiA - chiS*deltam)*eta)/(2.*deltam*(-1. + 2.*eta))\n",
+    "\n",
+    "rho55v2 = (487. - 1298.*eta + 512.*eta2)/(390.*(-1. + 2.*eta))\n",
+    "rho55v3 = (-2.*a)/3.\n",
+    "rho55v4 = -3353747./2129400. + a2/2.\n",
+    "rho55v5 = -241.*a/195.\n",
+    "rho55v6 = 0.\n",
+    "\n",
+    "rho54v2 = (-17448. + 96019.*eta - 127610.*eta2 + 33320.*eta3)/(13650.*(1. - 5.*eta + 5.*eta2))\n",
+    "rho54v3 = (-2.*a)/15.\n",
+    "rho54v4 = -16213384./15526875. + (2.*a2)/5.\n",
+    "\n",
+    "rho53v2 = (375. - 850.*eta + 176.*eta2)/(390.*(-1. + 2.*eta))\n",
+    "rho53v3 = (-2.*a)/3.\n",
+    "rho53v4 = -410833./709800. + a2/2.\n",
+    "rho53v5 = -103.*a/325.\n",
+    "\n",
+    "rho52v2 = (-15828. + 84679.*eta - 104930.*eta2 + 21980.*eta3)/(13650.*(1. - 5.*eta + 5.*eta2))\n",
+    "rho52v3 = (-2.*a)/15.\n",
+    "rho52v4 = -7187914./15526875. + (2.*a2)/5.\n",
+    "\n",
+    "rho51v2 = (319. - 626.*eta + 8.*eta2)/(390.*(-1. + 2.*eta))\n",
+    "rho51v3 = (-2.*a)/3.\n",
+    "rho51v4 = -31877./304200. + a2/2.\n",
+    "rho51v5 = 139.*a/975.\n",
+    "\n",
+    "rho66v2 = (-106. + 602.*eta - 861.*eta2 + 273.*eta3)/(84.*(1. - 5.*eta + 5.*eta2))\n",
+    "rho66v3 = (-2.*a)/3.\n",
+    "rho66v4 = -1025435./659736. + a2/2.\n",
+    "\n",
+    "rho65v2 = (-185. + 838.*eta - 910.*eta2 + 220.*eta3)/(144.*(deltam2 + 3.*eta2))\n",
+    "rho65v3 = -2.*a/9.\n",
+    "\n",
+    "rho64v2 = (-86. + 462.*eta - 581.*eta2 + 133.*eta3)/(84.*(1. - 5.*eta + 5.*eta2))\n",
+    "rho64v3 = (-2.*a)/3.\n",
+    "rho64v4 = -476887./659736. + a2/2.\n",
+    "\n",
+    "rho63v2 = (-169. + 742.*eta - 750.*eta2 + 156.*eta3)/(144.*(deltam2 + 3.*eta2))\n",
+    "rho63v3 = -2.*a/9.\n",
+    "\n",
+    "rho62v2 = (-74. + 378.*eta - 413.*eta2 + 49.*eta3)/(84.*(1. - 5.*eta + 5.*eta2))\n",
+    "rho62v3 = (-2.*a)/3.\n",
+    "rho62v4 = -817991./3298680. + a2/2.\n",
+    "\n",
+    "rho61v2 = (-161. + 694.*eta - 670.*eta2 + 124.*eta3)/(144.*(deltam2 + 3.*eta2))\n",
+    "rho61v3 = -2.*a/9.\n",
+    "\n",
+    "rho77v2 = (-906. + 4246.*eta - 4963.*eta2 + 1380.*eta3)/(714.*(deltam2 + 3.*eta2))\n",
+    "rho77v3 = -2.*a/3.\n",
+    "\n",
+    "rho76v2 = (2144. - 16185.*eta + 37828.*eta2 - 29351.*eta3 + 6104.*eta4)/(1666.*(-1 + 7*eta - 14*eta2 + 7 * eta3))\n",
+    "\n",
+    "rho75v2 = (-762. + 3382.*eta - 3523.*eta2 + 804.*eta3)/(714.*(deltam2 + 3.*eta2))\n",
+    "rho75v3 = -2.*a/3.\n",
+    "\n",
+    "rho74v2 = (17756. - 131805.*eta + 298872.*eta2 - 217959.*eta3\n",
+    "           + 41076.*eta4)/(14994.*(-1. + 7.*eta - 14.*eta2 + 7. * eta3))\n",
+    "\n",
+    "rho73v2 = (-666. + 2806.*eta - 2563.*eta2 + 420.*eta3)/(714.*(deltam2 + 3.*eta2))\n",
+    "rho73v3 = -2.*a/3.\n",
+    "\n",
+    "rho72v2 = (16832. - 123489.*eta + 273924.*eta2 - 190239.*eta3\n",
+    "           + 32760.*eta4)/(14994.*(-1. + 7.*eta - 14.*eta2 + 7.*eta3))\n",
+    "\n",
+    "rho71v2 = (-618. + 2518.*eta - 2083.*eta2 + 228.*eta3)/(714.*(deltam*deltam + 3.*eta2))\n",
+    "rho71v3 = -2.*a/3.\n",
+    "\n",
+    "rho88v2 = (3482. - 26778.*eta + 64659.*eta2 - 53445.*eta3 + 12243.*eta4)/(2736.*(-1. + 7.*eta - 14.*eta2 + 7.*eta3))\n",
+    "\n",
+    "rho87v2 = (23478. - 154099.*eta + 309498.*eta2 - 207550.*eta3 + 38920*eta4)/(18240.*(-1 + 6*eta - 10*eta2 + 4*eta3))\n",
+    "\n",
+    "rho86v2 = (1002. - 7498.*eta + 17269.*eta2 - 13055.*eta3 + 2653.*eta4)/(912.*(-1. + 7.*eta - 14.*eta2 + 7.*eta3))\n",
+    "\n",
+    "rho85v2 = (4350. - 28055.*eta + 54642.*eta2 - 34598.*eta3 + 6056.*eta4)/(3648.*(-1. + 6.*eta - 10.*eta2 + 4.*eta3))\n",
+    "\n",
+    "rho84v2 = (2666. - 19434.*eta + 42627.*eta2 - 28965.*eta3 + 4899.*eta4)/(2736.*(-1. + 7.*eta - 14.*eta2 + 7.*eta3))\n",
+    "\n",
+    "rho83v2 = (20598. - 131059.*eta + 249018.*eta2 - 149950.*eta3 + 24520.*eta4)/(18240.*(-1. + 6.*eta - 10.*eta2\n",
+    "                                                                                      + 4.*eta3))\n",
+    "\n",
+    "rho82v2 = (2462. - 17598.*eta + 37119.*eta2 - 22845.*eta3 + 3063.*eta4)/(2736.*(-1. + 7.*eta - 14.*eta2 + 7.*eta3))\n",
+    "\n",
+    "rho81v2 = (20022. - 126451.*eta + 236922.*eta2 - 138430.*eta3 + 21640.*eta4)/(18240.*(-1. + 6.*eta - 10.*eta2\n",
+    "                                                                                      + 4.*eta3))"
    ]
   },
   {
