Changed grid parameters and ran tests comparing effects of the two boundary conditions near x=0.

--- a/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests_oldBCs.ipynb
+++ b/Tutorial-Start_to_Finish-GiRaFFE_HO-1D_tests_oldBCs.ipynb
@@ -628,11 +628,11 @@
     "// Step P3a: Free parameters for the numerical grid\n",
     "// Cartesian coordinates parameters\n",
     "const REAL xmin = -4.0,xmax=4.0;\n",
-    "const REAL ymin = -0.0125,ymax=0.0125;\n",
-    "const REAL zmin = -0.0125,zmax=0.0125;\n",
+    "const REAL ymin = -0.1,ymax=0.1;\n",
+    "const REAL zmin = -0.1,zmax=0.1;\n",
     "\n",
     "// Time coordinate parameters\n",
-    "const REAL t_final = 2.0;  /* Final time is set so that at t=t_final, \n",
+    "const REAL t_final = 0.1;  /* Final time is set so that at t=t_final, \n",
     "                            * data at the origin have not been corrupted \n",
     "                            * by the approximate outer boundary condition */\n",
     "REAL CFL_FACTOR = 0.5; // Set the CFL Factor\n",
@@ -1067,14 +1067,15 @@
     "        xx[0][i0] -= -mu_AW*(n)*dt;\n",
     "    }\n",
     "                                 \n",
-    "    if(n%10 == 0) {\n",
+    "    if(n%1 == 0) {\n",
     "        printf(\"Writing output...\\n\");\n",
     "//        const int i1mid = Nxx_plus_2NGHOSTS[1]/2;\n",
     "        char filename[100];\n",
-    "        sprintf(filename,\"out%d-%08d_numer.txt\",Nxx[0],n);\n",
+    "        sprintf(filename,\"oldbc_out%d-%08d_numer.txt\",Nxx[0],n);\n",
     "        FILE *out2D_numer = fopen(filename, \"w\");\n",
     "        //LOOP_REGION(NGHOSTS,Nxx_plus_2NGHOSTS[0]-NGHOSTS, NGHOSTS,Nxx_plus_2NGHOSTS[1]-NGHOSTS, NGHOSTS,Nxx_plus_2NGHOSTS[2]-NGHOSTS) {\n",
-    "        LOOP_REGION(0,Nxx_plus_2NGHOSTS[0], Nxx_plus_2NGHOSTS[1]/2,Nxx_plus_2NGHOSTS[1]/2+1,Nxx_plus_2NGHOSTS[2]/2,Nxx_plus_2NGHOSTS[2]/2+1) {\n",
+    "        //LOOP_REGION(0,Nxx_plus_2NGHOSTS[0], Nxx_plus_2NGHOSTS[1]/2,Nxx_plus_2NGHOSTS[1]/2+1,Nxx_plus_2NGHOSTS[2]/2,Nxx_plus_2NGHOSTS[2]/2+1) {\n",
+    "        LOOP_REGION(Nxx_plus_2NGHOSTS[0]/2,Nxx_plus_2NGHOSTS[0]/2+1,0,Nxx_plus_2NGHOSTS[1],Nxx_plus_2NGHOSTS[2]/2,Nxx_plus_2NGHOSTS[2]/2+1) {\n",
     "            const int idx = IDX3(i0,i1,i2);\n",
     "            REAL xx0 = xx[0][i0];\n",
     "            REAL xx1 = xx[1][i1];\n",
@@ -1691,22 +1692,22 @@
       "\n",
       "Compiling executable...\n",
       "Executing `gcc -Ofast -fopenmp -march=native GiRaFFE_standalone/GiRaFFE_standalone.c -o GiRaFFE_standalone_1D -lm`...\n",
-      "Finished executing in 1.42386198044 seconds.\n",
+      "Finished executing in 1.42440199852 seconds.\n",
       "Finished compilation.\n",
-      "Finished in 1.440513134 seconds.\n",
+      "Finished in 1.43909287453 seconds.\n",
       "\n",
       "\n",
       "Now running at low resolution. Should take ~20 seconds...\n",
       "\n",
-      "Executing `taskset -c 0,1,2,3 ./GiRaFFE_standalone_1D 1280 4 4 0.5`...\n",
-      "\u001b[2KIt: 640 t=2.00 | 100.0%; ETA 0 s | t/h 725.06 | gp/s 5.28e+06\n",
-      "Finished executing in 10.0763430595 seconds.\n",
-      "Finished in 10.09065485 seconds.\n",
+      "Executing `taskset -c 0,1,2,3 ./GiRaFFE_standalone_1D 1280 32 32 0.5`...\n",
+      "\u001b[2KIt: 32 t=0.10 | 100.0%; ETA 0 s | t/h 17.37 | gp/s 8.09e+06\n",
+      "Finished executing in 21.127781868 seconds.\n",
+      "Finished in 21.1502740383 seconds.\n",
       "\n",
       "\n",
       "Now running at medium resolution. Should take ~300 seconds...\n",
       "\n",
-      "Finished in 9.10758972168e-05 seconds.\n",
+      "Finished in 2.00271606445e-05 seconds.\n",
       "\n",
       "\n"
      ]
@@ -1723,12 +1724,12 @@
     "end = time.time()\n",
     "print(\"Finished in \"+str(end-start)+\" seconds.\\n\\n\")\n",
     "\n",
-    "cmd.delete_existing_files(\"out1280*.txt\")\n",
+    "cmd.delete_existing_files(\"oldbc_out1280*.txt\")\n",
     "cmd.delete_existing_files(\"out2560*.txt\")\n",
     "\n",
     "print(\"Now running at low resolution. Should take ~20 seconds...\\n\")\n",
     "start = time.time()\n",
-    "cmd.Execute(\"GiRaFFE_standalone_1D\", \"1280 4 4 0.5\")\n",
+    "cmd.Execute(\"GiRaFFE_standalone_1D\", \"1280 32 32 0.5\")\n",
     "# Switching back to see more output\n",
     "#!taskset -c 0,1 ./GiRaFFE_standalone_1D 1280 4 4 0.5\n",
     "end = time.time()\n",
@@ -1756,13 +1757,18 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 1 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "IOError",
+     "evalue": "out1280-00000300_numer.txt not found.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIOError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-61edaf636543>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mData_numer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"out1280-00000300_numer.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;31m#Data_num_2 = np.loadtxt(\"out2560-00000600_numer.txt\")\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mData_exact\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloadtxt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"out1280-00000300_exact.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/penelson/juppp/site-packages/numpy/lib/npyio.py\u001b[0m in \u001b[0;36mloadtxt\u001b[0;34m(fname, dtype, comments, delimiter, converters, skiprows, usecols, unpack, ndmin, encoding)\u001b[0m\n\u001b[1;32m    924\u001b[0m             \u001b[0mfname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    925\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_is_string_like\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 926\u001b[0;31m             \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_datasource\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    927\u001b[0m             \u001b[0mfencoding\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'encoding'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'latin1'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    928\u001b[0m             \u001b[0mfh\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0miter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfh\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/penelson/juppp/site-packages/numpy/lib/_datasource.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(path, mode, destpath, encoding, newline)\u001b[0m\n\u001b[1;32m    260\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    261\u001b[0m     \u001b[0mds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mDataSource\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdestpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 262\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mds\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mencoding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mencoding\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnewline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    263\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    264\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/penelson/juppp/site-packages/numpy/lib/_datasource.py\u001b[0m in \u001b[0;36mopen\u001b[0;34m(self, path, mode, encoding, newline)\u001b[0m\n\u001b[1;32m    616\u001b[0m                                       encoding=encoding, newline=newline)\n\u001b[1;32m    617\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 618\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mIOError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s not found.\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    619\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    620\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIOError\u001b[0m: out1280-00000300_numer.txt not found."
+     ]
     }
    ],
    "source": [
@@ -1798,17 +1804,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[2KProcessing file out1280-00000640_exact.txt\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.pyplot import savefig\n",
@@ -1850,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1877,24 +1875,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<video width=\"480\" height=\"360\" controls>\n",
-       "  <source src=\"GiRaFFE_HO-1D_tests.mp4\" type=\"video/mp4\">\n",
-       "</video>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%HTML\n",
     "<video width=\"480\" height=\"360\" controls>\n",
