--- a/Tutorial-SEOBNR_Initial_Conditions.ipynb
+++ b/Tutorial-SEOBNR_Initial_Conditions.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -148,6 +148,12 @@
     "  * [Step 3.k:](#rotater) Rotate ${\\bf r}$\n",
     "  * [Step 3.l:](#rotatep) Rotate ${\\bf p}$\n",
     "1. [Step 4:](#step4) Compute $\\dot{\\bf r}$\n",
+    "  * [Step 4.a:](#carttosph) Convert from Cartesian to Spherical Coordinates\n",
+    "  * [Step 4.b:](#secondderiv) Second derivatives of $H_{\\rm real}$\n",
+    "  * [Stop 4.c:](#dedr) $\\frac{ \\partial E }{ \\partial r }$\n",
+    "  * [Step 4.d:](#skerr) ${\\bf S}_{\\rm Kerr}$\n",
+    "  * [Step 4.e:](#sigmastar) $\\boldsymbol{\\sigma}^{*}$\n",
+    "  * [Step 4.f:](#hreal) $H_{\\rm real}$\n",
     "1. [Step 5:](#step5) Invert the rotation of Step 3\n",
     "1. [Output](#latex_pdf_output): Output this module to $\\LaTeX$-formatted PDF"
    ]
@@ -181,12 +187,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "M = m1 + m2\n",
-    "Msqinv = 1/M*M\n",
+    "Minv = 1/M\n",
+    "Msqinv = Minv*Minv\n",
     "eta = m1*m2*Msqinv"
    ]
   },
@@ -211,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,11 +273,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rhat = np.array([0., 0., 1.])"
+    "rhat = np.array([1., 0., 0.])"
    ]
   },
   {
@@ -295,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -753,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,11 +790,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rprm = np.dot(rotate, q)"
+    "rprm = np.dot(rotate,q)"
    ]
   },
   {
@@ -813,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +843,7 @@
    "source": [
     "<a id='carttosph'></a>\n",
     "\n",
-    "## Convert from Cartesian to Spherical Coordinates \\[Back to [top](#toc)\\]\n",
+    "## Step 4.a: Convert from Cartesian to Spherical Coordinates \\[Back to [top](#toc)\\]\n",
     "$$\\label{carttosph}$$\n",
     "\n",
     "We convert position and momentum into spherical coordinates.  In the special case where $\\theta = \\frac{ \\pi }{ 2 }$ and $\\phi = 0$, the spherical position vector ${\\bf r} = \\left( {\\bf r}^{r}, {\\bf r}^{\\theta}, {\\bf r}^{\\phi} \\right)$ is given by\n",
@@ -860,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +881,7 @@
    "source": [
     "<a id='secondderiv'></a>\n",
     "\n",
-    "## Second derivatives of $H_{\\rm real}$ \\[Back to [top](#toc)\\]\n",
+    "## Step 4.b: Second derivatives of $H_{\\rm real}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{seconderiv}$$\n",
     "\n",
     "We need to compute $\\frac{ \\partial H }{ \\partial {\\bf p}^{\\phi} }$, $\\frac{ \\partial^{2} H_{\\rm real} }{ \\partial r^{2} }$, and $\\frac{ \\partial^{2} H_{\\rm real} }{ \\partial r \\partial {\\bf p}^{\\phi} }$ (<font color='red'>in another module</font>).\n",
@@ -884,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,10 +905,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='dEdr'></a>\n",
+    "<a id='dedr'></a>\n",
     "\n",
-    "## $\\frac{ \\partial E }{ \\partial r }$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{dEdr}$$\n",
+    "## Stop 4.c: $\\frac{ \\partial E }{ \\partial r }$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{dedr}$$\n",
     "\n",
     "We seek to compute $\\frac{ \\partial H }{\\partial r}$, and [BCD2006](https://arxiv.org/abs/gr-qc/0508067) uses the convention $H \\equiv E$.  (see [BCD2006](https://arxiv.org/abs/gr-qc/0508067) Equation (3.7)).  From [BCD2006](https://arxiv.org/abs/gr-qc/0508067) Equation Equation (4.14) (noting that this equation applies in spherical coordinates when ${\\bf r}$ is directed along the ${\\bf e}_{0}$ axis),\n",
     "\n",
@@ -912,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +932,7 @@
    "source": [
     "<a id='skerr'></a>\n",
     "\n",
-    "## ${\\bf S}_{\\rm Kerr}$ \\[Back to [top](#toc)\\]\n",
+    "## Step 4.d: ${\\bf S}_{\\rm Kerr}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{skerr}$$\n",
     "\n",
     "From [BB2010](https://arxiv.org/abs/0912.3517) Equations (5.2), (5.63), and (5.67) we have\n",
@@ -934,7 +941,7 @@
     "    {\\bf S}_{\\rm Kerr} = {\\bf S}_{1} + {\\bf S}_{2}.\n",
     "\\end{equation*}\n",
     "\n",
-    "Taking the square of [BB2010](https://arxiv.org/abs/0912.3517) Equation (4.9) <font color='red'>(be careful with the factor or $M$...)</font>,\n",
+    "Taking the square of [BB2010](https://arxiv.org/abs/0912.3517) Equation (4.9),\n",
     "\n",
     "\\begin{equation*}\n",
     "    a^{2} = \\frac{ {\\bf S}_{Kerr} \\cdot {\\bf S}_{Kerr} }{ M^{2} }\n",
@@ -949,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,7 +971,7 @@
    "source": [
     "<a id='sigmastar'></a>\n",
     "\n",
-    "## $\\boldsymbol{\\sigma}^{*}$ \\[Back to [top](#toc)\\]\n",
+    "## Step 4.e: $\\boldsymbol{\\sigma}^{*}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{sigmastar}$$\n",
     "\n",
     "From [BB2010](https://arxiv.org/abs/0912.3517) Equation (5.3),\n",
@@ -976,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,20 +994,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='Hreal'></a>\n",
+    "<a id='hreal'></a>\n",
     "\n",
-    "## $H_{\\rm real}$ \\[Back to [top](#toc)\\]\n",
-    "$$\\label{Hreal}$$\n",
+    "## Step 4.f: $H_{\\rm real}$ \\[Back to [top](#toc)\\]\n",
+    "$$\\label{hreal}$$\n",
     "\n",
-    "We now compute $H_{\\rm real}$ (LALSimIMRSpinEOBInitialConditionsPrec.c Line 1217) (<font color='red'>another module</font>)."
+    "We now compute $H_{\\rm real}$ (LALSimIMRSpinEOBInitialConditionsPrec.c Line 1217).  To do so, we need to restructure the output of Tutorial-SEOBNR_Documentation by first making sure each expression is on a single line and then reversing the lines."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Open the output file\n",
+    "with open('SEOBNR/Hamiltonian-Hreal_one_line_expressions.txt', 'w') as output:\n",
+    "    count = 0\n",
+    "    # Read output of Tutorial-SEOBNR_Documentation\n",
+    "    for line in list(open(\"SEOBNR/Hamiltonian-Hreal_on_top.txt\")):\n",
+    "        # Read the first line\n",
+    "        if count == 0:\n",
+    "            prevline=line\n",
+    "        #Check if prevline is a complete expression\n",
+    "        elif \"=\" in prevline and \"=\" in line:\n",
+    "            output.write(\"%s\\n\" % prevline.strip('\\n'))\n",
+    "            prevline=line\n",
+    "        # Check if line needs to be adjoined to prevline\n",
+    "        elif \"=\" in prevline and not \"=\" in line:\n",
+    "            prevline = prevline.strip('\\n')\n",
+    "            prevline = (prevline+line).replace(\" \",\"\")\n",
+    "        # Be sure to print the last line.\n",
+    "        if count == len(list(open(\"SEOBNR/Hamiltonian-Hreal_on_top.txt\")))-1:\n",
+    "            if not \"=\" in line:\n",
+    "                print(\"ERROR. Algorithm not robust if there is no equals sign on the final line. Sorry.\")\n",
+    "                sys.exit(1)\n",
+    "            else:\n",
+    "                output.write(\"%s\\n\" % line)\n",
+    "        count = count + 1\n",
+    "\n",
+    "# Now reverse the expressions\n",
+    "with open('SEOBNR/Hamiltonian-Hreal_on_bottom.txt', 'w') as output:\n",
+    "    for line in reversed(list(open(\"SEOBNR/Hamiltonian-Hreal_one_line_expressions.txt\"))):\n",
+    "        output.write(\"%s\\n\" % line.rstrip().replace(\"sp.sqrt\", \"np.sqrt\").replace(\"sp.Rational\",\n",
+    "                                \"np.divide\").replace(\"sp.abs\", \"np.abs\").replace(\"sp.log\",\n",
+    "                                \"np.log\").replace(\"sp.sign\", \"np.sign\"))\n",
+    "\n",
     "Hreal = 1."
    ]
   },
@@ -1013,7 +1052,7 @@
     "## Polar data \\[Back to [top](#toc)\\]\n",
     "$$\\label{polardata}$$\n",
     "\n",
-    "At LALSimIMRSpinEOBInitialConditionsPrec.c Lines 1234--1238, we set the following polar data ${\\bf P}$ <font color='red'>(need to find reference for this?)</font>:\n",
+    "At LALSimIMRSpinEOBInitialConditionsPrec.c Lines 1234--1238, we set the following polar data ${\\bf P}$:\n",
     "\n",
     "\\begin{align*}\n",
     "    {\\bf P}^{0} &= {\\bf r}^{r} \\\\\n",
@@ -1025,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,18 +1091,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/tyler/jup/lib/python3.6/site-packages/ipykernel_launcher.py:1: RuntimeWarning: divide by zero encountered in double_scalars\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vPhiKepler = 1./(omega*omega*r[0]*r[0]*r[0])"
    ]
@@ -1088,13 +1118,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rcrossp0 = rprm1*pprm2 - rprm2*pprm1\n",
-    "rcrossp1 = rprm2*pprm0 - rprm0*pprm2\n",
-    "rcrossp2 = rprm0*pprm1 - rprm1*pprm0"
+    "rcrossp = np.cross(rprm,pprm)"
    ]
   },
   {
@@ -1106,7 +1134,7 @@
     "## vPhi \\[Back to [top](#toc)\\]\n",
     "$$\\label{vphi}$$\n",
     "\n",
-    "We'll use the notation\n",
+    "We'll use the notation (<font color='red'> paper reference?</font>)\n",
     "\n",
     "\\begin{equation*}\n",
     "    {\\rm vPhi} = \\omega {\\bf r}^{r} \\sqrt[3]{\\rm vPhiKepler}.\n",
@@ -1117,11 +1145,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "vPhi = omega*rr*sp.cbrt(vPhiKepler)"
+    "vPhi = omega*r[0]*np.cbrt(vPhiKepler)"
    ]
   },
   {
@@ -1130,22 +1158,22 @@
    "source": [
     "<a id='sidot'></a>\n",
     "\n",
-    "## ${\\bf S}_{i} \\cdot {\\bf L}$ \\[Back to [top](#toc)\\]\n",
+    "## ${\\bf S}_{i} \\cdot \\hat{\\bf L}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{sidotl}$$\n",
     "\n",
-    "We compute ${\\bf S}_{1} \\cdot {\\bf L}$ and ${\\bf S}_{2} \\cdot {\\bf L}$.\n",
+    "We compute ${\\bf S}_{1} \\cdot \\hat{\\bf L}$ and ${\\bf S}_{2} \\cdot \\hat{\\bf L}$.\n",
     "\n",
     "See LALSimIMRSpinEOBFactorizedFluxPrec_v3opt.c lines 131--134."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "s1dotL = S1hatprm0*Lhat0 + S1hatprm1*Lhat1 + S1hatprm2*Lhat2\n",
-    "s2dotL = S2hatprm0*Lhat0 + S2hatprm1*Lhat1 + S2hatprm2*Lhat2"
+    "s1dotL = np.dot(S1,Lhat)\n",
+    "s2dotL = np.dot(S2,Lhat)"
    ]
   },
   {
@@ -1156,17 +1184,17 @@
     "## $\\boldsymbol{\\chi}_{\\rm S}$, $\\boldsymbol{\\chi}_{\\rm A}$ \\[Back to [top](#toc)\\]\n",
     "$$\\label{chii}$$\n",
     "\n",
-    "From [P2014](https://arxiv.org/abs/1307.6232) Equations 17, we have\n",
+    "From [P2014](https://arxiv.org/abs/1307.6232) Equation 17, we have\n",
     "\n",
     "\\begin{align*}\n",
-    "    \\chi_{\\rm S} = \\frac{1}{2} \\left( {\\bf S}_{1} + {\\bf S}_{2} \\right) \\cdot L \\\\\n",
-    "    \\chi_{\\rm A} = \\frac{1}{2} \\left( {\\bf S}_{1} - {\\bf S}_{2} \\right) \\cdot L\n",
+    "    \\chi_{\\rm S} = \\frac{1}{2} \\left( {\\bf S}_{1} + {\\bf S}_{2} \\right) \\cdot \\hat{\\bf L} \\\\\n",
+    "    \\chi_{\\rm A} = \\frac{1}{2} \\left( {\\bf S}_{1} - {\\bf S}_{2} \\right) \\cdot \\hat{\\bf L}\n",
     "\\end{align*}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1192,12 +1220,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mhat1 = m1/M\n",
-    "mhat2 = m2/M"
+    "mhat1 = m1*Minv\n",
+    "mhat2 = m2*Minv"
    ]
   },
   {
@@ -1729,21 +1757,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
