Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis: more info on writing vs appending to file

--- a/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
+++ b/Tutorial-ETK_thorn-Interpolation_to_Spherical_Grids_MO_Cart_to_SphBasis.ipynb
@@ -384,8 +384,10 @@
     "  FILE *file;\n",
     "  if(*InterpCounter == 1 && *order==1) {\n",
     "    file = fopen (filename,\"w\");\n",
+    "    printf(\"WRITING to file %s\\n\",filename);\n",
     "  } else {\n",
     "    file = fopen (filename,\"a+\");\n",
+    "    printf(\"Appending to file %s\\n\",filename);\n",
     "  }\n",
     "  if (! file) {\n",
     "    CCTK_VWarn (1, __LINE__, __FILE__, CCTK_THORNSTRING,\n",
